# Tanmay

./: .gitignore  README.md  fly.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  logging.py
apps/api/app/middleware/: ratelimit.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: ad.py  content.py  dependencies.py  qa.py
apps/api/app/services/: ad_export.py  ad_validate.py  brand_safety.py  citation_verifier.py  embeddings.py  llm.py  persona.py  rag.py  reranker.py  retrieval.py  vector_store.py
apps/api/tests/: test_brand_safety.py
apps/web/: .env.example  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
config/: sources.schema.yaml  sources.yaml
config/persona/: v1.md
data/: README.md  blind_test_proxy.py  blind_test_results.json  build_exemplars.py  build_manifest.py  collect.py  download_batch.sh  embed.py  finalize.py  identify_speaker.py  index.json  manifest.json  mark_tanmay.py  moonshot_projects.json  overpowered_tanmay.json  pull_voice_corpus.py  rag_smoke.py  retag.py  run_downloads.sh  stats.md  tanmay_ads.json  tanmay_speakers.json  tone_calibrate.py  transcribe.py  voice_analyze.py  voice_corpus.json  voice_profile.json
docs/: tanmay-gpt-architecture.html
infra/: docker-compose.yml  init.sql
scripts/: eval.py  ingest_ads.py  redteam.py  scrape_moonshot_ads.py
scripts/results/: eval_20260424_023311.json  redteam_20260424_021236.json  redteam_20260424_021912.json  (+2 more)
(+40 files in other folders)
