[project]
name = "tanmay-gpt-api"
version = "0.1.0"
description = "Create with Tanmay, FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
    "anthropic>=0.39.0",
    "qdrant-client>=1.12.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "voyageai>=0.3.0",
    "cohere>=5.11.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "python-multipart>=0.0.17",
    "langfuse>=2.54.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
